--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,12 @@
-# Use official lightweight Python image
-FROM python:3.11-slim
+FROM python:3.10-slim
 
-# Set working directory
 WORKDIR /app
 
-# Copy all backend files
+COPY requirements.txt .
+RUN pip install -r requirements.txt
+
 COPY . .
 
-# Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Expose the port your app runs on
 EXPOSE 5000
 
-# Run the app
 CMD ["python", "app.py"]
